--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,100 @@
+/* Déclaration des polices */
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./fonts/inter/Inter-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./fonts/inter/Inter-SemiBold.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* Déclaration des couleurs */
+
 :root {
     --noir: #292929;
     --gris-texte: #A6A6A6;
     --gris-clair: #F5F3EF;
     --vert: #00AC66;
   }
+
+/* Body */
+
+body {
+  margin: 0;
+  color: var(--noir);
+}
+
+/* Header */
+
+header {
+  background-color: var(--gris-clair);
+  display: flex;
+  justify-content: space-around;
+}
+
+header a {
+  font-family: 'Inter', Arial;
+  font-size: 0.88em;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: none;
+  letter-spacing: 0.02em;
+  color: var(--noir);
+  padding: 0 22px;
+}
+
+.focus  {
+  font-weight: bold;
+}
+
+a:hover {
+  font-weight: bold;
+}
+
+header img {
+  width: 155px;
+  height : 51px;
+  padding: 15px 28px 15px 0;
+}
+
+.mainNav {
+  display: flex; 
+  align-items: center;
+}
+
+.mainNav nav {
+  display: flex;
+  padding: 0 28px;
+}
+
+.secondaryNav {
+  display: flex;
+  align-items: center;
+}
+
+.secondaryNav a {
+  display: flex;
+  justify-content: space-between;
+}
+
+.secondaryNav svg {
+  padding: 3px 5px 0 0;
+}
+
+.secondaryNav span {
+  margin: 2px 3px;
+  padding: 2px 3px 0 3px;
+  border-radius: 7px;
+  background-color: var(--noir);
+  color: var(--gris-clair);
+  font-size: 0.5em;
+  font-weight: 700;
+}
