--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,3 @@
-/* Déclaration des polices */
-
-@font-face {
-  font-family: 'Inter';
-  src: url('./fonts/inter/Inter-Regular.otf') format('opentype');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('./fonts/inter/Inter-SemiBold.otf') format('opentype');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('./fonts/inter/Inter-Light.otf') format('opentype');
-  font-weight: light;
-  font-style: normal;
-  font-display: swap;
-}
-
 /* Déclaration des couleurs */
 
 :root {
@@ -31,6 +5,8 @@
     --gris-texte: #A6A6A6;
     --gris-clair: #F5F3EF;
     --vert: #00AC66;
+    --blanc: #FFFFFF;
+    --beige: #FAF9F7;
   }
 
 /* Body */
@@ -39,6 +15,7 @@ body {
   margin: 0;
   color: var(--noir);
   background-color: var(--gris-clair);
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
 /* Header */
@@ -49,10 +26,9 @@ header {
 }
 
 header a {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-size: 0.88em;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   text-decoration: none;
   letter-spacing: 0.02em;
   color: var(--noir);
@@ -60,11 +36,11 @@ header a {
 }
 
 .focus  {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 a:hover {
-  font-weight: bold;
+  font-weight: 600;
 }
 
 header img {
@@ -110,12 +86,11 @@ header img {
 /* Footer */
 
 footer {
-  background-color: #FFFFFF;
+  background-color: var(--blanc);
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-style: light;
+  font-weight: 300;
   font-size: 0.75em;
 }
 
@@ -127,4 +102,188 @@ footer img {
 
 footer p {
   padding: 20px;
+}
+
+
+/* Home */
+
+h3 {
+  font-family: 'Playfair Display', 'Times New Roman', Times, serif;
+  font-size: 2em;
+  font-weight: 400;
+}
+
+
+.presentation {
+  display: flex;
+  align-items: center;
+  padding: 80px 300px;
+}
+
+.presentation h2 {
+  font-family: 'Playfair Display', 'Times New Roman', Times, serif;
+  font-size: 2.25em;
+  font-weight: 400;
+  margin: 0 0 16px 0;
+}
+
+.presentation p {
+  font-size: 1em;
+  font-weight: 300;
+  padding-bottom: 40px;
+}
+
+.link-button {
+  font-size: 1em;
+  font-weight: 600;
+  color: var(--blanc);
+  text-decoration: none;
+  background-color: var(--vert);
+  padding: 22px 38px;
+  border-radius: 10px;
+}
+
+.presentation figure {
+  text-align: right;
+}
+
+.presentation img {
+  width: 404px;
+  height: 539px;
+}
+
+.presentation figcaption {
+  font-size: 0.75em;
+  font-style: italic;
+  color: var(--gris-texte);
+  padding: 8px 2px 0 0;
+}
+
+.last-books {
+  background-color: var(--beige);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.last-books h3 {
+  padding: 80px 0;
+  margin: 0px;
+}
+
+.show-books {
+  display: flex;
+  justify-content: center;
+}
+
+.book-card {
+  margin: 0 20px;
+  background-color: var(--blanc);
+  border-radius: 0 0 5px 5px;
+}
+
+.book-card img {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  justify-content: center;
+}
+
+.text-card {
+  width: 172px;
+  height: 84px;
+  padding: 20px 14px;
+}
+
+.text-card h4 {
+  font-size: 1em;
+  font-weight: 400;
+  margin: 0;
+}
+
+.text-card h5 {
+  font-size: 0.87em;
+  font-weight: 400;
+  color: var(--gris-texte);
+  margin: 8px 0 22px 0;
+}
+
+.text-card p {
+  font-size: 0.62em;
+  font-style: italic;
+  color: var(--gris-texte);
+  margin:0;
+}
+
+.last-books .link-button {
+  margin : 48px 0 64px 0;
+}
+
+.description {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.description h3 {
+  margin: 80px 0 24px 0;
+}
+
+.description h4 {
+  width: 400px;
+  font-size: 1em;
+  font-weight: 300;
+}
+
+.description div {
+  display: flex;
+  align-items: center;
+}
+
+.description p {
+  display: flex;
+  align-items: center;
+  width: 197px;
+  height: 139px;
+  background-color: var(--blanc);
+  border-radius: 10px;
+  font-size: 0.87em;
+  padding: 0 18px;
+  margin : 40px 18px 48px 18px;
+}
+
+.description a {
+  font-size: 1em;
+  font-weight: 600;
+  color: var(--vert);
+  text-decoration: none;
+  padding: 22px 38px;
+  margin-bottom: 80px;
+  border: 1px solid var(--vert);
+  border-radius: 10px;
+}
+
+.values {
+  width: 462px;
+  padding: 80px 20px 89px 542px;
+}
+
+.values p {
+  font-size: 1em;
+  font-weight: 300;
+  padding: 0 70px 8px 0;
+}
+
+.signature {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 17px;
+}
+
+.signature address {
+  color: var(--gris-texte);
+  font-size: 0.75em;
+  font-style: italic;
+  padding-top: 14px;
 }
