--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,10 @@ h3 {
   margin:0;
 }
 
+.no-dispo {
+  color: red;
+}
+
 /* Home */
 
 .presentation {
@@ -317,7 +321,6 @@ h3 {
 
 .show-books {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
   padding: 0 246px;
