--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 /* Déclaration des couleurs */
 
 :root {
-    --noir: #292929;
-    --gris-texte: #A6A6A6;
-    --gris-clair: #F5F3EF;
-    --vert: #00AC66;
-    --blanc: #FFFFFF;
+    --black: #292929;
+    --grey-text: #A6A6A6;
+    --clear-grey: #F5F3EF;
+    --green: #00AC66;
+    --white: #FFFFFF;
     --beige: #FAF9F7;
+    --brown : #C56D6D;
   }
 
 /* Body */
@@ -14,7 +15,7 @@
 body {
   margin: 0;
   color: var(--noir);
-  background-color: var(--gris-clair);
+  background-color: var(--clear-grey);
   font-family: 'Inter', Arial, Helvetica, sans-serif;
 }
 
@@ -31,7 +32,7 @@ header a {
   font-weight: 400;
   text-decoration: none;
   letter-spacing: 0.02em;
-  color: var(--noir);
+  color: var(--black);
   padding: 0 22px;
 }
 
@@ -77,8 +78,8 @@ header img {
   margin: 2px 3px;
   padding: 2px 3px 0 3px;
   border-radius: 7px;
-  background-color: var(--noir);
-  color: var(--gris-clair);
+  background-color: var(--black);
+  color: var(--clear-grey);
   font-size: 0.5em;
   font-weight: 700;
 }
@@ -86,7 +87,7 @@ header img {
 /* Footer */
 
 footer {
-  background-color: var(--blanc);
+  background-color: var(--white);
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -125,9 +126,14 @@ h3 {
   justify-content: center;
 }
 
+.show-books a {
+  color: var(--black);
+  text-decoration: none;
+}
+
 .book-card {
   margin: 0 20px;
-  background-color: var(--blanc);
+  background-color: var(--white);
   border-radius: 0 0 5px 5px;
 }
 
@@ -153,19 +159,50 @@ h3 {
 .text-card h5 {
   font-size: 0.87em;
   font-weight: 400;
-  color: var(--gris-texte);
+  color: var(--grey-text);
   margin: 8px 0 22px 0;
 }
 
 .text-card p {
   font-size: 0.62em;
   font-style: italic;
-  color: var(--gris-texte);
+  color: var(--grey-text);
   margin:0;
 }
 
 .no-dispo {
-  color: red;
+  display: inline-block;
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+
+.no-dispo img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  justify-content: center;
+}
+
+.text-overlay {
+  position: absolute;
+  top : 12px;
+  right: 16px;
+  background-color: var(--brown);
+  border-radius: 30px;
+  color: var(--white);
+  font-size: 0.55em;
+  font-weight: 500;
+}
+
+.text-overlay p {
+  margin: 0;
+  padding: 4px 13px;
+}
+
+.dispo p {
+  display: none;
 }
 
 /* Home */
@@ -189,9 +226,9 @@ h3 {
 .link-button {
   font-size: 1em;
   font-weight: 600;
-  color: var(--blanc);
+  color: var(--white);
   text-decoration: none;
-  background-color: var(--vert);
+  background-color: var(--green);
   padding: 22px 38px;
   border-radius: 10px;
 }
@@ -208,7 +245,7 @@ h3 {
 .presentation figcaption {
   font-size: 0.75em;
   font-style: italic;
-  color: var(--gris-texte);
+  color: var(--grey-text);
   padding: 8px 2px 0 0;
 }
 
@@ -255,7 +292,7 @@ h3 {
   align-items: center;
   width: 197px;
   height: 139px;
-  background-color: var(--blanc);
+  background-color: var(--white);
   border-radius: 10px;
   font-size: 0.87em;
   padding: 0 18px;
@@ -265,11 +302,11 @@ h3 {
 .description a {
   font-size: 1em;
   font-weight: 600;
-  color: var(--vert);
+  color: var(--green);
   text-decoration: none;
   padding: 22px 38px;
   margin-bottom: 80px;
-  border: 1px solid var(--vert);
+  border: 1px solid var(--green);
   border-radius: 10px;
 }
 
@@ -291,7 +328,7 @@ h3 {
 }
 
 .signature address {
-  color: var(--gris-texte);
+  color: var(--grey-text);
   font-size: 0.75em;
   font-style: italic;
   padding-top: 14px;
@@ -310,12 +347,12 @@ h3 {
 .searchfield {
   width: 277px;
   height: 45px;
-  border: 1px solid var(--gris-clair);
+  border: 1px solid var(--clear-grey);
   border-radius: 6px;
   background: url(../img/glass.png) no-repeat scroll 16px 15px;
   background-color: var(--blanc);
   padding-left:45px;
-  color: var(--gris-texte);
+  color: var(--grey-text);
   font-size: 0.875em;
 }
 
@@ -329,4 +366,100 @@ h3 {
 
 .show-books .book-card {
   margin: 0 17px 48px 17px;
+}
+
+/* Book detail */
+
+.breadcrumb {
+  margin: 16px 0 16px 150px;
+  color: var(--grey-text);
+  font-size: 0.62em;
+  font-weight: 300;
+}
+
+.book-detail {
+  display: flex;
+  height: 800px;
+}
+
+.book-detail img {
+  width: 50%;
+  max-height: 100%;
+  object-fit: contain;
+  justify-content: center;
+  background-color: var(--beige);
+}
+
+.infos {
+  width: 50%;
+  max-height: 100%;
+  background-color: var(--beige);
+  margin: 0;
+}
+
+.infos h2 {
+  margin: 0;
+  padding: 59px 0 0 85px;
+}
+
+.infos h4 {
+  margin: 0;
+  padding : 16px 0 32px 85px;
+  color: var(--grey-text);
+  font-size: 1em;
+  font-weight: 400;
+}
+
+#line {
+  margin: 0 0 0 85px;
+  padding: 0;
+  width: 27px;
+  height: 0;
+  border-top: 1px solid var(--grey-text);
+}
+
+.infos h5 {
+  margin: 0;
+  padding: 32px 0 16px 85px;
+  font-size: 0.5 em;
+  font-weight: 600;
+}
+
+.description {
+  margin: 0;
+  padding: 0 150px 16px 85px;
+  text-align: justify;
+  text-overflow: ellipsis;
+}
+
+.owner {
+  display: flex;
+  width: fit-content;
+  align-items: center;
+  margin: 0 85px;
+  padding-right: 16px;
+  background-color: var(--white);
+  border-radius: 114px;
+  font-size: 0.87em;
+}
+
+.owner img {
+  padding: 6px 12px 6px 6px;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  object-fit: cover;
+}
+
+.infos a {
+  position: relative;
+  top: 80px;
+  margin: 0 150px 80px 85px;
+  font-size: 1em;
+  font-weight: 600;
+  color: var(--white);
+  text-decoration: none;
+  background-color: var(--green);
+  padding: 22px 38px;
+  border-radius: 10px;
 }
