--- a/css/style.css
+++ b/css/style.css
@@ -462,6 +462,78 @@ h3 {
   color: var(--white);
   text-decoration: none;
   background-color: var(--green);
+  padding: 22px 125px;
+  border-radius: 10px;
+}
+
+
+/* Page de connexion et d'inscription */
+
+.connection {
+  display: flex;
+  background-color: var(--beige);
+}
+
+.connectionForm {
+  width: 50%;
+  padding: 210px 150px;
+  margin: 0;
+}
+
+.connectionForm form {
+  margin: 56px 0 40px 0;
+  color: var(--grey-text);
+  font-size: 0.87em;
+}
+
+.connectionForm input {
+  width: 322px;
+  height: 50px;
+  margin: 10px 0 32px 0;
+  border: #F0F0F0 solid 1px;
+  border-radius: 3px;
+}
+
+.connectionForm button {
+  font-size: 1em;
+  font-weight: 600;
+  color: var(--white);
+  text-decoration: none;
+  background-color: var(--green);
+  padding: 22px 38px;
+  border-radius: 10px;
+  border: none;
+}
+
+.connectionForm p {
+  margin: 0;
+  size: 0.87em;
+}
+
+.connectionForm a {
+  color: var(--black);
+  text-decoration: none;
+}
+
+.connection img {
+  width: 50%;
+}
+
+
+/* Page d'erreur */
+
+.error {
+  margin: 80px 85px 100px 85px;
+}
+
+.error a {
+  position: relative;
+  top: 40px;
+  font-size: 1em;
+  font-weight: 600;
+  color: var(--white);
+  text-decoration: none;
+  background-color: var(--green);
   padding: 22px 38px;
   border-radius: 10px;
 }
