--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,8 @@ h3 {
 /*Book Form*/
 
 .bookForm {
-  padding: 40px 150px 92px 150px;
+  width: 100%;
+  padding: 40px 50px 92px 150px;
   background-color: var(--beige);
 }
 
@@ -267,7 +268,7 @@ h3 {
 }
 
 .bookInfos input, select, textarea {
-  width: 435px;
+  width: 100%;
   height: 50px;
   background-color: var(--light-grey);
   border: 1px solid var(--clear-grey);
@@ -495,21 +496,19 @@ h3 {
 
 .book-detail {
   display: flex;
-  max-height: 850px;
+  height: fit-content;
+  background-color: var(--beige);
 }
 
 .book-detail img {
   width: 50%;
-  max-height: 100%;
+  max-height: 950px;
   object-fit: contain;
   justify-content: center;
-  background-color: var(--beige);
 }
 
 .infos {
   width: 50%;
-  max-height: 100%;
-  background-color: var(--beige);
   margin: 0;
 }
 
@@ -560,24 +559,32 @@ h3 {
 }
 
 .owner img {
-  padding: 6px 12px 6px 6px;
+  margin: 6px 12px 6px 6px;
   border-radius: 50%;
   width: 48px;
   height: 48px;
   object-fit: cover;
 }
 
-.infos a {
-  position: relative;
+.owner a {
+  color: var(--black);
+  font-size: 0.87em;
+  text-decoration: none;
+}
+
+.infos .link-button {
+  display: block;
+  width: 70%;
   top: 80px;
   bottom: 80px;
-  margin: 0 150px 0 85px;
+  margin: 80px 0 80px 85px;
   font-size: 1em;
   font-weight: 600;
   color: var(--white);
   text-decoration: none;
+  text-align: center;
   background-color: var(--green);
-  padding: 22px 125px;
+  padding: 22px 0;
   border-radius: 10px;
 }
 
@@ -637,6 +644,7 @@ h3 {
 /*Page utilisateur*/
 
 .userPage {
+  width: fit-content;
   background-color: var(--beige);
   padding: 90px 150px 100px 150px;
 }
@@ -657,6 +665,7 @@ h3 {
   background-color: var(--white);
   border-radius: 20px;
   text-align: center;
+  margin-right: 10px;
 }
 
 .userInfos img {
@@ -840,6 +849,13 @@ tbody tr:nth-child(even) {
 
 .links .delete {
   color: #CB2D2D;
+}
+
+.userPage .link-button {
+  display: block;
+  width: 93%;
+  text-align: center;
+  margin-top: 50px;
 }
 
 /*Page de chargement des images*/
