--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,11 @@ body {
 
 header {
   display: flex;
-  justify-content: space-around;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
 }
 
 header a {
@@ -49,12 +53,14 @@ header img {
   width: 155px;
   height : 51px;
   padding: 15px 28px 15px 0;
+  margin-left: 150px;
 }
 
-.mainNav {
+.main-menu {
   display: flex; 
   justify-content: space-between;
   align-items: center;
+  padding: 0 28px;
 }
 
 .burger-toggle {
@@ -68,10 +74,6 @@ header img {
   font-size: 1.5em;
 }
 
-.mainNav nav {
-  display: flex;
-  padding: 0 28px;
-}
 
 .secondaryNav {
   display: flex;
@@ -552,7 +554,7 @@ h3 {
   font-weight: 600;
 }
 
-.description {
+.book-description {
   margin: 0;
   padding: 0 150px 16px 85px;
   text-align: justify;
@@ -1137,15 +1139,17 @@ aside h3 {
 }
 
 
-/* Meddia queries pour petits écrans */
+/* Meddia queries pour mobiles */
 
-@media (max-width: 768px) {
+@media (max-width: 600px) {
 
 
   /* Header */
 
   header {
     position: relative;
+    justify-content: space-between;
+    padding-left: 20px;
   }
 
   .burger-toggle {
@@ -1170,10 +1174,10 @@ aside h3 {
     height: 40px;
     text-align: center;
     line-height: 40px;
+    color: var(--grey-text);
   }
 
-  .mainNav .main-menu,
-  .secondaryNav {
+  .nav {
     display: none;
     flex-direction: column;
     position: absolute;
@@ -1182,21 +1186,126 @@ aside h3 {
     right: 0;
     background-color: white;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  }
+}
 
-  .mainNav .main-menu a,
-  .secondaryNav a {
+.navMenu {
+    width: 100%;
+}
+
+.burger-toggle:checked ~ .nav {
+    display: flex;
+}
+
+.main-menu {
+    order: 1;
+    flex-direction: column;
+}
+
+.secondaryNav {
+    order: 2;
+    flex-direction: column;
+    padding-left: 25px;
+}
+
+header a {
     padding: 10px 15px;
     width: 100%;
     text-align: left;
-  }
+}
 
-  .burger-toggle:checked ~ .main-menu,
-  .burger-toggle:checked ~ .secondaryNav {
-    display: flex;
-  }
+.secondaryNav a {
+  justify-content: flex-start;
+}
 
-  .mainNav img {
+  header img {
+    margin-left: 0;
     max-width: 150px;
   }
+
+  /* Footer */
+
+  footer {
+    flex-direction: column;
+    padding: 20px 0;
+  }
+
+  footer p {
+    padding: 0;
+  }
+
+  footer img {
+    padding: 10px;
+  }
+
+  /* Home */
+
+  .presentation {
+    flex-direction: column-reverse;
+    padding: 0;
+  }
+
+  .presentation h3  {
+    font-size: 1.87em;
+  }
+
+  .presentation div {
+    padding: 20px;
+  }
+
+  .presentation .link-button {
+    display: block;
+    width: 80%;
+    text-align: center;
+  }
+
+  .show-books {
+    padding: 0 20px;
+  }
+
+  .last-books .link-button {
+    display: none;
+  }
+
+  .description {
+    padding: 0 20px;
+  }
+
+  .description div {
+    flex-direction: column;
+  }
+
+  .description p {
+    margin: 10px;
+    padding: 53px 27px;
+    height: fit-content;
+    width: 80%;
+    justify-content: center;
+  }
+
+  .description a {
+    display: block;
+    width: 75%;
+    margin-top: 20px;
+    text-align: center;
+  }
+
+  .banner img {
+    width: 100%;
+    height: 425px;
+    object-fit: cover;
+  }
+
+  .values {
+    padding: 20px;
+  }
+
+  .signature {
+    flex-direction: column;
+  }
+
+  .signature svg {
+    margin: auto;
+    padding: 50px 0;
+  }
+
 }
